<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/noInternetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:visibility="gone"> <ImageView
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:src="@drawable/ic_language"
    android:contentDescription="@string/no_internet" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_internet_connection"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/check_your_mobile_data_or_wi_fi_and_try_again"
        android:textColor="#666666" />

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/menuBackgroundColor"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/retry"
        android:textColor="@color/white" />

</LinearLayout>