<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_login_vector"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center"
        android:text="@string/order_groceries_and_vegetables"
        android:textStyle="bold"
        android:lineSpacingExtra="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textSize="35sp"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_no"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textStyle="bold"
                android:inputType="none"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:background="@drawable/ed_common"
                android:text="+91"/>

            <EditText
                android:id="@+id/phoneNo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                android:autofillHints="phoneNational"
                android:layout_marginStart="5dp"
                android:maxLength="10"
                android:textStyle="bold"
                android:background="@drawable/ed_common"
                android:paddingStart="10dp"
                android:hint="Enter mobile no"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/continue_"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</RelativeLayout>