<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:src="@drawable/ic_menu"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_toEndOf="@id/menu"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/locationLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/ic_location"
                    app:tint="@color/white" />
                <TextView
                    android:id="@+id/location_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="New York"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:paddingHorizontal="12dp"
            android:paddingBottom="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_search_btn"
                android:paddingHorizontal="12dp">

                <EditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@+id/search_actions_container"
                    android:background="@android:color/transparent"
                    android:hint="Search products..."
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/search_actions_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/clear_search"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_close"
                        android:visibility="gone"
                        app:tint="@color/shadow_1" />
                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_search"
                        app:tint="@color/shadow_1" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvGreeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_morning"
                    android:textColor="#757575"
                    android:textSize="14sp"
                    app:drawableStartCompat="@drawable/ic_sun"
                    android:drawablePadding="6dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="Prasanth"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_filter"
                android:paddingHorizontal="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/filter"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">
                <include layout="@layout/shimmer_placeholder_grid" />
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="8dp"
                android:layout_marginBottom="4dp"
                tools:listitem="@layout/item_product" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bottomCartCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="16dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/primaryDark"
                app:cardCornerRadius="12dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvBottomCartCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2 ITEMS"
                            android:textColor="#CCFFFFFF"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvBottomCartPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="$12.50"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="View Cart"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        app:drawableEndCompat="@drawable/ic_arrow_right"
                        android:drawablePadding="8dp"
                        app:drawableTint="@color/white" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <include
                android:id="@+id/layoutState"
                layout="@layout/layout_empty_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="60dp" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/primaryDark"
        app:itemIconTint="@color/white"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>